# workforce-manager

./: README.md
backend/: .gitignore  alembic.ini  check_db.py  main.py  pyproject.toml
backend/.claude/: ad656eccfbb1_add_employees_is_active.py  cbefd961ed2e_initial_schema.py  settings.json
backend/alembic/: env.py
backend/alembic/versions/: 11bef4a9b048_initial_migration.py  2f4c9d7a8b21_employee_department_designation_fk.py  73835ae26b70_initial_migration.py  ad656eccfbb1_add_employees_is_active.py  cbefd961ed2e_initial_schema.py  d6c43585aa92_add_role.py  e437ec7b2597_initial_migration.py
backend/db/: base.py  session.py
backend/models/: attendance.py  claims.py  department.py  notification.py  salary.py  user.py
backend/router/: attendance.py  auth.py  department.py  document.py  employee.py  leave.py  notification.py  reimbursement.py  salary.py
backend/schemas/: __init__.py  attendance.py  auth.py  department.py  document.py  employee.py  leave.py  notification.py  reimbursement.py  salary.py
backend/services/: auth.py
backend/test/unit/: conftest.py  test_auth.py  test_idcard.py  test_leave.py  test_salary.py  test_salary_history.py
backend/utils/: config.py
frontend/: .env.example  .gitignore  README.md  openai.json  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: StatusUtils.jsx  api.js  mockData.js
web/: .env  .gitignore  openapi.json  package.json
web/.claude/: settings.json
web/src/: App.tsx
(+42 files in other folders)
